# cloud-sentinel

./: .gitignore  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  main.py  settings.py
src/admin/: query.py  resources.py  routes.py  utils.py
src/classifier/: model.pkl  model.py  utils.py
src/core/: collector.py  enums.py  kinesis.py  prometheus.py  redis.py
src/integrations/: __init__.py  boto3.py  httpx.py  patch_redis.py  postgres.py  pymongo.py  redis.py  socket.py  sqlite.py  vm.py
src/models/: enum.py  models.py
src/resources/: resources.py  routes.py
src/templates/: dashboard.html  dependencies.html  sla_report.html
src/utils/: enums.py
